# RustProjects

./: Cargo.toml  README.md
SSE-web/: Cargo.toml  REAMME.md
SSE-web/src/: broadcaster.rs  handlers.rs  lib.rs  main.rs  server.rs  state.rs
auth-web/: Cargo.toml
auth-web/src/: auth.rs  config.rs  handler.rs  main.rs  models.rs  route.rs
http-udp-web/: Cargo.toml
http-udp-web/src/: main.rs
http-udp-web/test/: udp_server.py  url_tester.py
mqtt/: Cargo.toml  README.md  UML.md
mqtt/src/: client.rs  main.rs  packet.rs  protocol.rs  server.rs
mqtt/src/patterns/: commands.rs  mod.rs  states.rs
rust-c-lib/: Cargo.toml  build.rs
rust-c-lib/cpart/: example.lib  libexample.c  libexample.h  mytime.h
rust-c-lib/src/: main.rs
rust-react-chat/: Cargo.toml
rust-react-chat/src/: db.rs  models.rs  schema.rs
src/: main.rs
udp_demo/: Cargo.toml
udp_demo/src/: main.rs
utoipa-demo/: Cargo.toml  REAMME.md
utoipa-demo/src/: config.rs  main.rs  state.rs
utoipa-demo/src/api_docs/: mod.rs  openapi.rs
utoipa-demo/src/handlers/: auth.rs  user.rs
utoipa-demo/src/middleware/: auth.rs
utoipa-demo/src/models/: user.rs
vue3-websocket/: Cargo.toml
vue3-websocket/src/: main.rs
vue3-websocket/static/: index.html
vue3-websocket/web/: package-lock.json  package.json
vue3-websocket/web/src/: App.vue
websocket/: Cargo.toml
websocket/src/: main.rs
websocket/web/: package-lock.json  package.json
websocket/web/src/: App.vue
websocket/web/src/router/: index.js
websocket/web/src/views/: About.vue  Contact.vue  Home.vue  Navigation.vue  WebSoccket.vue  (+1 more)
