[package]
name = "udp_demo"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"



[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
