[package]
name = "vue3-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
env_logger = "0.11.5"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
